# Ehviewer

./: .gitmodules  README-zh-TW.md  README.md  build.gradle  build.gradle.kts  gradle.properties  ktlint.gradle.kts  renovate.json  settings.gradle  settings.gradle.kts
.github/ISSUE_TEMPLATE/: -------feature-request.md  bug------bug-report.md  bug-report.yml  config.yml  feature-request.yml
.github/workflows/: android.yml  ci.yml  codeql-analysis.yml  pull_request.yml  releases.yml
app/: .gitignore  build.gradle  build.gradle.kts  proguard-rules.pro
app/keystore/: androidkey.jks
app/schemas/com.hippo.ehviewer.dao.EhDatabase/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  4.json  5.json  6.json  7.json  8.json  9.json
app/schemas/com.hippo.ehviewer.dao.SearchDatabase/: 1.json  2.json
app/schemas/com.hippo.network.CookiesDatabase/: 1.json  2.json
app/src/debug/: AndroidManifest.xml
app/src/debug/res/values/: strings.xml
app/src/debug/res/values-es/: strings.xml
app/src/debug/res/xml-v25/: shortcuts.xml
app/src/main/: AndroidManifest.xml
app/src/main/catch_panic/: Cargo.toml
app/src/main/catch_panic/src/: handler.rs  lib.rs
app/src/main/catch_panic_macros/: Cargo.toml
app/src/main/cpp/: 0001-Don-t-build-other-binarys.patch  0001-Don-t-build-shared-lib.patch  0001-Hide-symbols.patch  0002-Insert-link-libs.patch  CMakeLists.txt  archive.c  archive.cpp  ehviewer.h  fdutils.c  gifUtils.c  gifutils.c  http_downloader.c  image.c  image.h  main.c  spinlock.h
app/src/main/cpp/image/: CMakeLists.txt  image.c  image_utils.c  image_utils.h  java_wrapper.c  java_wrapper.h
app/src/main/cpp/natsort/: strnatcmp.c
app/src/main/cpp/nettle/: config.h  version.h
app/src/main/jni_fn/: Cargo.toml  LICENSE
app/src/main/jni_fn/src/: lib.rs
app/src/main/res/anim/: accelerate_quart.xml  decelerate_quart.xml  decelerate_quint.xml  decelerate_terz.xml  scene_close_enter.xml  scene_close_exit.xml  scene_open_enter.xml  scene_open_enter_horizontal.xml  scene_open_exit_horizontal.xml
app/src/main/res/color/: content_reactive.xml  content_reactive_black.xml  primary_text_material_black.xml
app/src/main/res/drawable/: big_download.xml  big_filter.xml  big_history.xml  big_label.xml  big_sad_pandroid.xml  big_search.xml  category_background.xml  check_text_view_foreground.xml  default_avatar.xml  divider_gallery_detail.xml  divider_gallery_detail_dark.xml  (+103 more)
app/src/main/res/drawable-hdpi/: sadpanda_low_poly.avif
app/src/main/res/drawable-mdpi/: sadpanda_low_poly.avif
app/src/main/res/drawable-night-v31/: ic_shortcut_start.xml  ic_shortcut_stop.xml
app/src/main/res/drawable-v25/: ic_shortcut_start.xml  ic_shortcut_stop.xml
app/src/main/res/drawable-v26/: ic_shortcut_start.xml  ic_shortcut_stop.xml
app/src/main/res/drawable-v31/: ic_shortcut_start.xml  ic_shortcut_stop.xml
app/src/main/res/drawable-xhdpi/: sadpanda_low_poly.avif  v_folder_move_x24.xml
app/src/main/res/drawable-xxhdpi/: sadpanda_low_poly.avif
app/src/main/rust/: Cargo.toml
app/src/main/rust/catch_panic/: Cargo.toml
app/src/main/rust/catch_panic/src/: handler.rs
app/src/main/rust/catch_panic_macros/: Cargo.toml
app/src/main/rust/catch_panic_macros/src/: lib.rs
app/src/main/rust/jni_fn/: Cargo.toml
app/src/main/rust/jnix/: Cargo.toml
app/src/main/rust/jnix/src/: as_jvalue.rs  jnix_env.rs  lib.rs
app/src/main/rust/jnix/src/from_java/: mod.rs
app/src/main/rust/jnix/src/from_java/implementations/: mod.rs
app/src/main/rust/jnix/src/from_java/implementations/std/: mod.rs  net.rs
app/src/main/rust/jnix/src/into_java/: mod.rs
app/src/main/rust/jnix/src/into_java/implementations/std/: mod.rs  net.rs
app/src/main/rust/src/: lib.rs
app/src/main/rust/src/parser/: fav.rs  home.rs  list.rs  mod.rs  torrent.rs
daogenerator/: build.gradle
docs/README/: en.md  pt-br.md  zh-cn.md  zh-tw.md
gradle/wrapper/: gradle-wrapper.properties
native/: build.gradle  build.gradle.kts  proguard-rules.pro
native/src/main/: AndroidManifest.xml
native/src/main/jni/: CMakeLists.txt  archive.c  fuse-archive.cpp  fuse_archive.h  main.c
native/src/main/jni/a7zip/: CMakeLists.txt
native/src/main/jni/a7zip/a7zip/: BlackHole.cpp  BlackHole.h  InArchive.cpp  InArchive.h  JavaEnv.cpp  JavaEnv.h  JavaHelper.cpp  JavaHelper.h  JavaInArchive.cpp  JavaInArchive.h  JavaInitA7Zip.cpp  JavaInitA7Zip.h  JavaInputStream.cpp  JavaInputStream.h  JavaSeekableInputStream.cpp  JavaSeekableInputStream.h  Log.h  OpenVolumeCallback.cpp  OpenVolumeCallback.h  OutputStream.cpp  OutputStream.h  PropType.h  SeekableInputStream.cpp  SeekableInputStream.h  SevenZip.cpp  SevenZip.h  Utils.h
native/src/main/jni/a7zip/p7zip/: CMakeLists.txt
native/src/main/jni/image/: CMakeLists.txt  image.c  image.h  image_plain.c  image_plain.h  image_utils.c  image_utils.h  java_wrapper.c  java_wrapper.h  log.h  utils.h
native/src/main/jni/image/cpufeatures/: CMakeLists.txt
native/src/main/jni/image/filter/: clahe.c  clahe.h  gray.c  gray.h  pixel.h
native/src/main/jni/image/giflib/: CMakeLists.txt
native/src/main/jni/image/image/: Android.mk  CMakeLists.txt  config.h  image.c  image.h  image_gif.c  image_gif.h  image_jpeg.c  image_jpeg.h  image_plain.c  image_plain.h  image_png.c  image_png.h  java_wrapper.c  java_wrapper.h
native/src/main/jni/image/image/filter/: clahe.c  clahe.h  gray.h  pixel.h
native/src/main/jni/image/libjpeg-turbo/: CMakeLists.txt  jconfig.h  jconfigint.h  jversion.h
native/src/main/jni/image/libpng/: CMakeLists.txt  pnglibconf.h
native/src/main/jni/image/stream/: Android.mk  CMakeLists.txt  input_stream.c  input_stream_pipe.c  output_stream.c  output_stream_pipe.c  patch_head_input_stream.c  patch_head_input_stream.h
native/src/main/jni/integrity/: CMakeLists.txt  am-proxy.c  am-proxy.h  apk-sign-v2.c  apk-sign-v2.h  common.c  common.h  genuine.c  genuine.h  inline.c  inline.h  openat.c  openat.h  path.c  path.h  plt.c  plt.h  pm.c  pm.h
native/src/main/jni/libfuse/: CMakeLists.txt  android_config.h  config.h
native/src/main/jni/nettle/: CMakeLists.txt  config.h
(+1285 files in other folders)
