[package]
name = "ehviewer_rust"
version = "0.0.0"
resolver = "2"

[lib]
crate_type = ["cdylib"]

[dependencies]
regex = { default-features = false, features = ["std", "unicode-perl"], version = "1.9" }
jnix = { path = "jnix" }
jnix-macros = "0.4"
catch_panic = { path = "catch_panic" }
catch_panic_macros = { path = "catch_panic_macros" }
jni_fn = { path = "jni_fn" }
quick-xml = { default-features = false, version = "0.30" }
tl = "0.7"
log = "0.4"
android_logger = { default-features = false, version = "0.13" }
apply = "0.3"
once_cell = { default-features = false, version = "1.18" }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
