[package]
name = "jnix"
description = "High-level extensions to help with the usage of JNI in Rust code"
version = "0.5.0"
authors = ["Mullvad VPN"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["ffi", "java", "jni"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/mullvad/jnix"
edition = "2018"

[features]
derive = ["jnix-macros"]

[dependencies]
jni = "0.21"
jnix-macros = { version = "0.4", optional = true }
once_cell = "1.18"
parking_lot = "0.12"

[dev-dependencies]
jnix-macros = { version = "0.4" }
